--- a/theme.toml
+++ b/theme.toml
@@ -1,4 +1,4 @@
-name = "Coder"
+name = "Dulun"
 license = "MIT"
 licenselink = "https://github.com/luizdepra/hugo-coder/blob/master/LICENSE.md"
 description = "A simple and clean blog theme for Hugo"
