--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ author = "C.J. Duan"
 description = "John Doe's personal website"
 keywords = "blog,developer,personal"
 info = ["Bayesian Machine Learning Scientist"]
-avatarURL = "images/avatar.jpg"
+avatarURL = "images/head.jpg"
 #gravatar = "john.doe@example.com"
 dateFormat = "January 2, 2006"
 since = 2019
