--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ info = ["Bayesian Machine Learning Scientist"]
 avatarURL = "images/head.jpg"
 #gravatar = "john.doe@example.com"
 dateFormat = "January 2, 2006"
-since = 2019
+since = 2016
 # Git Commit in Footer, uncomment the line below to enable it
 commit = "https://github.com/luizdepra/hugo-coder/tree/"
 # Right To Left, shift content direction for languagues such as Arabic
@@ -144,7 +144,7 @@ url = "about/"
 [[languages.en.menu.main]]
 name = "Markov Reading List"
 weight = 2
-url = "posts/"
+url = "markov/"
 
 [[languages.en.menu.main]]
 name = "Causal Inference"
