--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ keywords = "blog,developer,personal"
 info = ["Bayesian Machine Learning Scientist"]
 avatarURL = "images/head.jpg"
 #gravatar = "john.doe@example.com"
-dateFormat = "January 2, 2006"
+dateFormat = "2006-01"
 since = 2016
 # Git Commit in Footer, uncomment the line below to enable it
 commit = "https://github.com/luizdepra/hugo-coder/tree/"
