--- a/config.toml
+++ b/config.toml
@@ -42,6 +42,32 @@ customSCSS = []
 # Custom JS
 customJS = []
 
+[params.homepage.hero]
+enable = true
+eyebrow = "Probabilistic ML"
+title = "Reliable AI research at DRC Lab"
+subtitle = "Exploring probabilistic modeling, causal inference, and modern generative systems."
+description = "We turn academic ideas into reproducible experiments and open-source tooling that teams can build on."
+
+[params.homepage.hero.primaryButton]
+label = "Read the latest posts"
+url = "posts/"
+
+[params.homepage.hero.secondaryButton]
+label = "Work with us"
+url = "mailto:compute@dulun.com"
+rel = "noopener"
+
+[params.homepage.featured]
+enable = true
+title = "Highlighted research notes"
+subtitle = "A curated sample of projects and write-ups from the lab."
+limit = 3
+requireFlag = true
+sections = ["posts"]
+ctaLabel = "Dive in"
+dateFormat = "Jan 2, 2006"
+
 # If you want to use fathom(https://usefathom.com) for analytics, add this section
 # [params.fathomAnalytics]
 # siteID = "ABCDE"
