--- a/content/docker/pymc5/Dockerfile
+++ b/content/docker/pymc5/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update \
     git \
     ca-certificates \
     wget \
+    graphviz \
     libopenblas-dev \
     liblapack-dev \
     libffi-dev \
@@ -23,7 +24,8 @@ WORKDIR /app
 # Copy and install Python deps
 COPY requirements.txt /app/requirements.txt
 RUN python -m pip install --upgrade pip setuptools wheel \
- && pip install -r /app/requirements.txt
+ && pip install -r /app/requirements.txt \
+ && pip install graphviz
 
 # Copy the example test
 COPY example.py /app/example.py
