chore: Rename PyMC5 Jupyter container and update PyMC notebook's Python version.

--- a/content/docker/pymc5/docker-compose.yml
+++ b/content/docker/pymc5/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: pymc5-jupyter
+    container_name: pymc5-jupyter-ai
     ports:
       - "8888:8888"
     volumes:
