feat: Add Groq setup notebook, enable .env loading in docker-compose, and update .gitignore and README.

--- a/content/docker/pymc5/docker-compose.yml
+++ b/content/docker/pymc5/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       #- .:/app
       # Mount the local content/ipynb directory for notebook access
       - ../../ipynb:/app/notebooks
+    env_file:
+      - .env
     environment:
       - JUPYTER_ENABLE_LAB=yes
     restart: unless-stopped
